# demucs

./: pyproject.toml
scripts/: convert-pth-to-onnx.py
